[package]
name = "polyme_rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dev-dependencies]
test-case = "*"
criterion = "*"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"

[dependencies]
fraction = "0.15.3"
indicatif = "0.17.11"
num = "0.4.3"
plotters = "0.3.7"
rand = "0.9.0"
